[package]
name = "coev"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", default-features = false, features = [
    "derive",
    "env",
    "help",
    "std"
] }
rand = { version = "0.9.0", default-features = false, features = [
    "std",
    "thread_rng"
] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json"
] }
serde = { version = "1.0.217", default-features = false, features = [
    "derive"
] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", default-features = false, features = [
    "full"
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
